--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,8 +4,12 @@ version: 2.1
 orbs:
   # Declare a dependency on the welcome-orb
   welcome: circleci/welcome-orb@0.4.1
+  cypress: cypress-io/cypress@1
 # Orchestrate or schedule a set of jobs
 workflows:
+  build: 
+    jobs: 
+      - cypress/run
   # Name the workflow "welcome"
   welcome:
     # Run the welcome/run job in its own container
